Completed CSDS lab work 3

--- a/AML_Lab/AML_MiniProject.ipynb
+++ b/AML_Lab/AML_MiniProject.ipynb
@@ -729,6 +729,37 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "hatchback       3876\nsedan           1256\nsuv              946\nluxury suv       169\nluxury sedan     135\nName: body_type, dtype: int64"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nullProcessed['body_type'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
